tests/snapshots/run_wpt_conformance__coreml_sub_float32_2D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
sub.https.any.js sub float32 2D tensors, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'inputB' must be of rank 1, instead got a multi-array value of rank 2.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f32[4, 6];
    inputB: f32[4, 6];
  }

  nodes {
    [output] = sub(inputA, inputB, label="");
  }

  outputs { output; }
}
