tests/snapshots/run_wpt_conformance__coreml_sub_float32_broadcast_1D_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
sub.https.any.js sub float32 broadcast 1D to 4D, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'inputB' must be of rank 2, instead got a multi-array value of rank 4.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f32[1];
    inputB: f32[2, 2, 2, 3];
  }

  nodes {
    [output] = sub(inputA, inputB, label="");
  }

  outputs { output; }
}
