tests/snapshots/run_wpt_conformance__coreml_sub_int64_4D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
sub.https.any.js sub int64 4D tensors, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type cast: Output '0' has incorrect type for operator 'ios17.cast'. Expected { tensor<uint8, [...]>, tensor<int16, [...]>, tensor<fp32, [...]>, tensor<int32, [...]>, tensor<fp16, [...]>, tensor<uint16, [...]>, tensor<int8, [...]>, tensor<bool, [...]> }; got tensor<int64, [2, 2, 2, 3]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: i64[2, 2, 2, 3];
    inputB: i64[2, 2, 2, 3];
  }

  nodes {
    [output] = sub(inputA, inputB, label="");
  }

  outputs { output; }
}
