tests/snapshots/run_wpt_conformance__coreml_sub_int8_4D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
sub.https.any.js sub int8 4D tensors, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type sub: Param 'y' has incorrect type for operator 'ios17.sub'. Expected { tensor<int32, [...]>, tensor<fp32, [...]>, tensor<fp16, [...]> }; got tensor<int8, [2, 2, 2, 3]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: i8[2, 2, 2, 3];
    inputB: i8[2, 2, 2, 3];
  }

  nodes {
    [output] = sub(inputA, inputB, label="");
  }

  outputs { output; }
}
