tests/snapshots/run_wpt_conformance__coreml_sub_uint32_4D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
sub.https.any.js sub uint32 4D tensors, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type cast: Output '0' has incorrect type for operator 'ios17.cast'. Expected { tensor<fp32, [...]>, tensor<uint16, [...]>, tensor<uint8, [...]>, tensor<int16, [...]>, tensor<int8, [...]>, tensor<int32, [...]>, tensor<fp16, [...]>, tensor<bool, [...]> }; got tensor<uint32, [1, 2, 2, 1]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: u32[1, 2, 2, 1];
    inputB: u32[1, 2, 2, 1];
  }

  nodes {
    [output] = sub(inputA, inputB, label="");
  }

  outputs { output; }
}
