tests/snapshots/run_wpt_conformance__coreml_sub_uint8_4D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
sub.https.any.js sub uint8 4D tensors, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type sub: Param 'y' has incorrect type for operator 'ios17.sub'. Expected { tensor<fp32, [...]>, tensor<int32, [...]>, tensor<fp16, [...]> }; got tensor<uint8, [1, 2, 2, 1]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: u8[1, 2, 2, 1];
    inputB: u8[1, 2, 2, 1];
  }

  nodes {
    [output] = sub(inputA, inputB, label="");
  }

  outputs { output; }
}
