tests/snapshots/run_wpt_conformance__coreml_tan_float16_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
tan.https.any.js tan float16 4D tensor, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'tanInput' must be of rank 5, instead got a multi-array value of rank 4.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    tanInput: f16[2, 2, 2, 3];
  }

  nodes {
    [tanOutput] = tan(tanInput, label="");
  }

  outputs { tanOutput; }
}
