tests/snapshots/run_wpt_conformance__coreml_tile_float16_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
tile.https.any.js tile float16 1D tensor, coreml
 Failed to dispatch graph: coreml runtime failed: input dtype mismatch: model expects 4-byte elements (code 65568), but input is Float16 (2-byte); type conversion is not supported for this input

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    tileInput: f16[4];
  }

  nodes {
    [tileOutput] = tile(tileInput, label="");
  }

  outputs { tileOutput; }
}
